--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -12,4 +12,18 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>Common</artifactId>
   <packaging>jar</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.4.8-jre</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.119.Final</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
