--- a/Gui/pom.xml
+++ b/Gui/pom.xml
@@ -14,6 +14,11 @@
   <packaging>jar</packaging>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/assets</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
@@ -57,6 +62,22 @@
       <groupId>dev.menga.metris</groupId>
       <artifactId>Server</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx</artifactId>
+      <version>1.9.10</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-backend-lwjgl3</artifactId>
+      <version>1.9.10</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-platform</artifactId>
+      <version>1.9.10</version>
+      <classifier>natives-desktop</classifier>
     </dependency>
   </dependencies>
 </project>
